Licznik czasu, animacja dodawania do koszyka

--- a/projekt/src/App.css
+++ b/projekt/src/App.css
@@ -4,3 +4,21 @@
     height: 25%;
 
 }
+
+@keyframes bounce {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  
+  /* has two classes: x and y */
+.bouncing
+    {
+    animation: bounce 0.5s;
+  }
