--- a/projekt/src/App.css
+++ b/projekt/src/App.css
@@ -1,9 +1,9 @@
-.product-image{
-    /* not big */
+/* .product-image{
+    /* not big 
     width: 25%;
     height: 25%;
 
-}
+} */
 
 @keyframes bounce {
     0% {
