--- a/projekt/src/App.scss
+++ b/projekt/src/App.scss
@@ -64,7 +64,8 @@
   }
 
   .product-image {
-    width: 100%;
+    max-width: 100%;
+    max-height: 190px;
     height: auto;
     margin-bottom: 10px;
   }
@@ -101,8 +102,65 @@ button {
   }
   
   .input-field {
-    width: 100%;
-    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    position: fixed;
+    right: 20px;
+    top: 10%;
+    font-size: 20px;
+    padding: 20px;
+    
   }  
+
+  #order-summary-button{
+  position: fixed;
+  right: 20px;
+  bottom: 50%;
+  transform: translateY(50%);
+  z-index: 9999;
+
+  button{ 
+    font-size: 24px;
+    padding: 20px 40px;
+
+  }
+}
+
+.categories {
+    position: fixed;
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%);
+    background-color: #f5f5f5;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  
+    h3 {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+  
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+  
+    li {
+      margin-bottom: 10px;
+      cursor: pointer;
+      color: #333;
+      font-size: 14px;
+      transition: color 0.2s;
+  
+      &:hover {
+        color: #555;
+      }
+  
+      &.active {
+        font-weight: bold;
+      }
+    }
+  }
+  
