--- a/projekt/src/App.css
+++ b/projekt/src/App.css
@@ -17,8 +17,28 @@
     }
   }
   
-  /* has two classes: x and y */
 .bouncing
     {
     animation: bounce 0.5s;
   }
+
+  .form-row {
+    display: flex;
+    margin-bottom: 10px;
+  }
+  
+  .form-label {
+    flex: 1;
+    text-align: right;
+    padding-right: 10px;
+  }
+  
+  .form-input {
+    flex: 2;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+
+  
+  
